Fix #1 changing to title case on collapse

--- a/src/webview/vscode-elements.css
+++ b/src/webview/vscode-elements.css
@@ -139,7 +139,6 @@
     margin: 0;
     overflow: hidden;
     text-overflow: ellipsis;
-    text-transform: uppercase;
     white-space: nowrap;
 }
 
